kubernetes/infrastructure.yml
apiVersion: v1
kind: Namespace
metadata:
  name: infrastructure

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysql
  namespace: infrastructure
spec:
  replicas: 1
  selector:
    matchLabels:
      app: mysql
  template:
    metadata:
      labels:
        app: mysql
    spec:
      volumes:
        - emptyDir: {}
          name: dump

        - name: mysql-persistent-storage
          persistentVolumeClaim:
            claimName: database-pvc

      containers:
        - name: mysql
          image: mysql
          ports:
            - containerPort: 3306
          volumeMounts:
            - name: dump
              mountPath: /docker-entrypoint-initdb.d

            - name: mysql-persistent-storage
              mountPath: /var/lib/mysql
---

apiVersion: v1
kind: Service
metadata:
  name: mysql
  namespace: infrastructure
spec:
  selector:
    app: mysql
  ports:
    - port: 3306
