kubernetes/todo-service.yml
apiVersion: v1
kind: Namespace
metadata:
  name: todo-service

---

apiVersion: apps/v1
kind: Deployment  
metadata:
  name: todo-service
  namespace: todo-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-service
  template:
    metadata:
      labels:
        app: todo-service
    spec:
      volumes:
        - name: application-config
          configMap:
            name: todo-service
      containers:
        - name: todo-service
          image: mrflick72/todo-service:latest
          imagePullPolicy: Never
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: todo-service
  namespace: todo-service
spec:
  selector:
    app: todo-service
  ports:
    - port: 8080
