kubernetes/keycloak.yml
---
apiVersion: v1
kind: Namespace
metadata:
  name: idp

---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: keycloak
  namespace: idp
spec:
  selector:
    matchLabels:
      app: keycloak
  template:
    metadata:
      labels:
        app: keycloak
    spec:
      containers:
        - name: keyclok
          image: jboss/keycloak
          ports:
            - containerPort: 8080
---

apiVersion: v1
kind: Service
metadata:
  name: keycloak
  namespace: idp
spec:
  selector:
    app: keycloak
  ports:
    - port: 8080

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: keycloak
  namespace: idp
spec:
  rules:
    - http:
        paths:
          - path: /auth
            backend:
              serviceName: keycloak
              servicePort: 8080
