kubernetes/todo-list-website.yml
apiVersion: v1
kind: Namespace
metadata:
  name: todo-list-website

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: todo-list-website
  namespace: todo-list-website
spec:
  replicas: 1
  selector:
    matchLabels:
      app: todo-list-website
  template:
    metadata:
      labels:
        app: todo-list-website
    spec:
      volumes:
        - name: filebeat
          configMap:
            name: filebeat-config

        - name: application-logs
          emptyDir: {}

        - name: application-config
          configMap:
            name: todo-list-website
      containers:
        - name: filebeats
          image: docker.elastic.co/beats/filebeat:7.6.1
          volumeMounts:
            - name: application-logs
              mountPath: /var/log/todo-list/

            - name: filebeat
              subPath: filebeat.yml
              mountPath: /usr/share/filebeat/filebeat.yml

        - name: todo-list-website
          image: mrflick72/todo-list-website:latest
          imagePullPolicy: Never
          volumeMounts:
            - mountPath: /usr/local/todo-list-website/application.yml
              subPath: application.yml
              name: application-config

            - mountPath: /var/log/todo-list/
              name: application-logs

---

apiVersion: v1
kind: Service
metadata:
  name: todo-list-website
  namespace: todo-list-website
spec:
  selector:
    app: todo-list-website
  ports:
    - port: 8080

---

apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: todo-list-website
  namespace: todo-list-website
spec:
  rules:
    - http:
        paths:
          - path: /website
            backend:
              serviceName: todo-list-website
              servicePort: 8080
